# cxc-hackthon

./: .env  .gitignore  README.md  README_PREDICTION.md  TECHNICAL_SUMMARY.md  app.py  house_prediction_demo.ipynb  house_price_predictor.py  housing_stress.db  listing.py  listing_scraper.py  listings.csv  main.py  pyproject.toml  requirements.txt
data/: listings.json  selenium_listings.csv  selenium_listings.json  synthetic_house_prices_20_years.csv
docs/: QUICKSTART_CLI.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Map.js  Sidebar.js  index.css  vite-env.d.ts
frontend/src/components/: ChatPanel.tsx  MapPanel.tsx  ParametersPanel.tsx
frontend/src/components/ui/: input.tsx
frontend/src/data/: listings.json
instance/: housing_stress.db
src/: interest_rate_model.onnx  interest_rate_model.onnx.data  interest_rate_model.pth  listings.json  scaler.pkl  scraper.py  trainInterest.py  validateInterest.py
src/backend/: app.py  listing_scraper_old.py  selenium_scraper.py
src/backend/instance/: housing_stress.db
src/backend/templates/: dashboard.html
src/frontend/: package-lock.json  vite.config.ts
src/frontend/src/: App.tsx  vite-env.d.ts
src/frontend/src/components/: MapPanel.tsx
src/frontend/src/components/ui/: dialog.tsx
src/model/: house_price_predictor.py  predict.py
static/css/: style.css
templates/: index.html  layout.html
