[project]
name = "cxc-hackthon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.7",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "geopandas>=1.1.2",
    "geoplot>=0.5.1",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "mllibs==0.0.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pmdarima>=2.1.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "webdriver-manager>=4.0.2",
    "xgboost>=3.1.3",
]
