[project]
name = "cxc-hackthon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.7",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "geopy>=2.4.1",
    "google>=3.0.0",
    "google-genai>=1.62.0",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "webdriver-manager>=4.0.2",
]
